# invoice

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  YoctoInvoice.spec  pyproject.toml  requirements.txt
src/invoice/: __init__.py  __main__.py  models.py  pdf.py  ui.py
src/invoice/data/ui/: about.ui  business_details.ui  main.ui
